--- a/index.html
+++ b/index.html
@@ -26,5 +26,10 @@
         <h2>-----------------------------------------------------------------Cavalo----------------------------------------------------------------</h2>
         <hr>
         <img src="assets/imagens/cavalo2.png" alt="">
+        <div id="personagem4"></div>
+        <hr>
+        <h2>-----------------------------------------------------------------Galinha----------------------------------------------------------------</h2>
+        <hr>
+        <img src="assets/imagens/galinha.png" alt="">
 </body>
 </html>
