--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
         <hr>
         <h2>-----------------------------------------------------------------Galinha-------------------------------------------------------</h2>
         <hr>
-        <img src="assets/imagens/galinha.png" alt="">
+        <img src="assets/imagens/galinhaaa2.webp" alt="">
 </body>
 </html>
